Changed rule panel activation to only when rules are enabled and a show/hidden is selected, ensuring users have to select a shown/hidden so we know what to do with the rules. Fixed some layout issues with excess margins Removed help text for rules enabled toggle in place of a dynamic label reducing the UI and improving the UX

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -67,3 +67,27 @@
 .block-visibility-controls-container.hide-controls {
     opacity: 0.2;
 }
+
+/*
+    Tidy up margins for user auth
+*/
+
+.block-visibility-user-authenticated-controls .components-panel__row .block-visibility-user-authenticated-control {
+    margin-bottom: 0;
+}
+
+/*
+    User roles have a massive margin, reduce that
+*/
+
+.block-visibility-user-role-controls .components-panel__row ul {
+    margin-bottom: 0;
+}
+
+.block-visibility-user-role-controls .components-panel__row ul .components-base-control {
+    margin-bottom: 5px;
+}
+
+.block-visibility-user-role-controls .components-panel__row ul .components-base-control:last-of-type {
+    margin-bottom: 0;
+}
